# python_component_versioning

./: main.py  pyproject.toml  tutorial_link.txt
module1/: pyproject.toml
module1/module1/: __init__.py
module2/: pyproject.toml
module2/module2/: __init__.py
module3/: pyproject.toml
module3/module3/: __init__.py
