[project]
name = "mainapp"
version = "0.1.0"
description = "Main app using all modules"
authors = [{ name = "Abdullah Tarek", email = "abdullahtarek@rocketmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["module2 @ git+https://github.com/abdullahtarek/python_component_versioning.git#subdirectory=module2"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
