[project]
name = "module2"
version = "0.1.0"
description = "Module that uses module1"
authors = [{ name = "Abdullah Tarek", email = "abdullahtarek@rocketmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
